--- a/Patients/src/main/resources/application.properties
+++ b/Patients/src/main/resources/application.properties
@@ -12,5 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
 
-# thymeleaf configurations
+# thymeleaf configurations for Auto reload Thymeleaf templates without restart
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
