--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
 	<modules>
 		<module>Patients</module>
+		<module>Notes</module>
 	</modules>
 
 	<properties>
@@ -78,6 +79,10 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 	</dependencies>
 
