Updates on REST note

--- a/Patients/src/main/resources/application.properties
+++ b/Patients/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+# App config
 logging.level.org.springframework=INFO
+spring.application.name=P10_patients
 server.port=8081
 
 ################### DataSource Configuration ##########################
