--- a/Notes/src/main/resources/application.properties
+++ b/Notes/src/main/resources/application.properties
@@ -1,16 +1,13 @@
+# App config
 logging.level.org.springframework=INFO
+spring.application.name=P10_notes
 server.port=8082
 
-################### DataSource Configuration ##########################
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/project_10?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Musapa1990..
-
-################### Hibernate Configuration ##########################
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
+################### MongoDB Configuration ##########################
+spring.data.mongodb.database=project_10
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.authentication-database=admin
 
 # thymeleaf configurations for Auto reload Thymeleaf templates without restart
 spring.thymeleaf.cache=false
