--- a/Patients/pom.xml
+++ b/Patients/pom.xml
@@ -15,7 +15,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.openclassrooms</groupId>
-			<artifactId>Shared</artifactId>
+			<artifactId>Domain</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
