finishing NoteControllerTests, adding data.sql and inserting patinets in table

--- a/Patients/src/main/resources/application.properties
+++ b/Patients/src/main/resources/application.properties
@@ -14,6 +14,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
 
+spring.sql.init.mode=always
+
+
+spring.sql.init.data-locations=classpath:db/data.sql
+
 # thymeleaf configurations for Auto reload Thymeleaf templates without restart
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=file:src/main/resources/templates/
