--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     container_name: patients
     ports:
       - 8081:8081
+    depends_on:
+      - mysql
     environment:
       - MYSQL_HOST=mysql
 
@@ -36,11 +38,14 @@ services:
     image: mysql:latest
     container_name: mysql
     ports:
-        - 3306:3306
+        - 3307:3306
     environment:
+        MYSQL_DATABASE: project_10
         MYSQL_ROOT_USER: root
         MYSQL_ROOT_PASSWORD: Musapa1990..
-        MYSQL_DATABASE: project_10
+    command: --innodb --init-file /data/application/init.sql
+    volumes:
+        - ./init.sql:/data/application/init.sql
         
   mongodb:
     image: mongo:latest
@@ -49,7 +54,7 @@ services:
     ports:
         - 27017:27017
     environment:
+        MONGO_INITDB_DATABASE: project_10
         MONGO_INITDB_ROOT_USERNAME: <admin-user>
         MONGO_INITDB_ROOT_PASSWORD: <admin-password>
-        MONGO_INITDB_DATABASE: project_10
 
