updates on docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,10 @@ services:
     container_name: patients
     ports:
       - 8081:8081
-    depends_on:
-      - mysql
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/database?autoReconnect=true&useSSL=false
+      SPRING_DATASOURCE_URL: jdbc:mysql://docker-mysql:3306/project_10?autoReconnect=true&useSSL=false
+    depends_on:
+      - docker-mysql
 
   notes:
     image: 'notes:latest'
@@ -34,7 +34,7 @@ services:
     environment:
       - MONGO_HOST=mongodb
       
-  mysql:
+  docker-mysql:
     image: mysql:latest
     container_name: mysql
     ports:
@@ -42,8 +42,7 @@ services:
     environment:
         MYSQL_DATABASE: project_10
         MYSQL_ROOT_USER: root
-        MYSQL_ROOT_PASSWORD: Musapa1990..
-        MYSQL_PASSWORD: Musapa1990..        
+        MYSQL_ROOT_PASSWORD: Musapa1990..        
         
   mongodb:
     image: mongo:latest
