--- a/Patients/src/main/resources/application.properties
+++ b/Patients/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8081
 
 ################### DataSource Configuration ##########################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/project_10?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/project_10?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Musapa1990..
 
@@ -15,9 +15,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
 
 spring.sql.init.mode=always
-
-
-spring.sql.init.data-locations=classpath:db/data.sql
 
 # thymeleaf configurations for Auto reload Thymeleaf templates without restart
 spring.thymeleaf.cache=false
