--- a/Notes/src/main/resources/application.properties
+++ b/Notes/src/main/resources/application.properties
@@ -6,7 +6,8 @@ server.port=8082
 ################### MongoDB Configuration ##########################
 spring.data.mongodb.database=project_10
 spring.data.mongodb.port=27017
-spring.data.mongodb.host=$(MONGO_HOST)
+#spring.data.mongodb.host=localhost
+spring.data.mongodb.host=${MONGO_HOST}
 spring.data.mongodb.authentication-database=admin
 
 # thymeleaf configurations for Auto reload Thymeleaf templates without restart
