--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - MYSQL_HOST=db-mysql
     depends_on:
       - db-mysql
+      - mongodb
 
   notes:
     image: 'notes:latest'
@@ -33,6 +34,8 @@ services:
       - 8082:8082
     environment:
       - MONGO_HOST=mongodb
+    depends_on:
+      - mongodb
       
   db-mysql:
     image: mysql:latest
@@ -46,15 +49,14 @@ services:
         MYSQL_DATABASE: project_10
         MYSQL_ROOT_USER: root
         MYSQL_ROOT_PASSWORD: Musapa1990..        
-        
+     
   mongodb:
     image: mongo:latest
     container_name: mongodb
+    network_mode: host
     restart: always
     ports:
         - 27017:27017
     environment:
         MONGO_INITDB_DATABASE: project_10
-        MONGO_INITDB_ROOT_USERNAME: <admin-user>
-        MONGO_INITDB_ROOT_PASSWORD: <admin-password>
 
