udates oin docker-compose.yml

--- a/Patients/src/main/resources/application.properties
+++ b/Patients/src/main/resources/application.properties
@@ -20,4 +20,11 @@ spring.sql.init.data-locations=classpath:sql/data.sql
 
 # thymeleaf configurations for Auto reload Thymeleaf templates without restart
 spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.thymeleaf.prefix=classpath:/templates/
+
+################### MongoDB Configuration ##########################
+spring.data.mongodb.database=project_10
+spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+spring.data.mongodb.host=${MONGO_HOST}
+spring.data.mongodb.authentication-database=admin
