--- a/Notes/src/main/resources/application.properties
+++ b/Notes/src/main/resources/application.properties
@@ -3,13 +3,13 @@ logging.level.org.springframework=INFO
 spring.application.name=P10_notes
 server.port=8082
 
+# thymeleaf configurations for Auto reload Thymeleaf templates without restart
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+
 ################### MongoDB Configuration ##########################
 spring.data.mongodb.database=project_10
 spring.data.mongodb.port=27017
 #spring.data.mongodb.host=localhost
 spring.data.mongodb.host=${MONGO_HOST}
 spring.data.mongodb.authentication-database=admin
-
-# thymeleaf configurations for Auto reload Thymeleaf templates without restart
-spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=file:src/main/resources/templates/
