--- a/Reports/src/main/resources/application.properties
+++ b/Reports/src/main/resources/application.properties
@@ -5,4 +5,11 @@ server.port=8080
 
 # thymeleaf configurations for Auto reload Thymeleaf templates without restart
 spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.thymeleaf.prefix=classpath:/templates/
+
+################### MongoDB Configuration ##########################
+spring.data.mongodb.database=project_10
+spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+spring.data.mongodb.host=${MONGO_HOST}
+spring.data.mongodb.authentication-database=admin
